# fpga-fl-bgv

./: .gitignore  Makefile  README.md  makefile_us_alveo.mk  utils.mk
data/: encrypted_weights_bias.h  keys.h  process_sample.sh  weights_bias.h  weights_bias_float.h
host2fpga/: Makefile  README.md  build_hls.tcl  config.ini  host.cpp
host2fpga/conv2d_hls/sol1/.autopilot/db/driver/src/: CMakeLists.txt
include/: constants.hpp  data_type.hpp  encryption.hpp  keys.h  modulo_reduction.hpp  ntt_transform.hpp  top.hpp
models/: README.md  fake_quant_fp_lenet_weight.pth  get_weight.py  train_model.py  vitis_ai_torch_quantizer.py
src/: config.mk  encryption.cpp  host.cpp  host_avg_pool1.cpp  host_avg_pool1_bwd.cpp  host_avg_pool2.cpp  host_avg_pool2_bwd.cpp  host_backward_path.cpp  host_conv1.cpp  host_conv1_bwd.cpp  host_conv2.cpp  host_conv2_bwd.cpp  host_encryption.cpp  host_fc1_bwd.cpp  host_fc3_bwd.cpp  host_fc_layer1.cpp  host_fc_layer2.cpp  host_forward_path.cpp  host_parameter_decryption.cpp  host_parameter_encryption.cpp  host_polynomial_multiplication.cpp  modulo_reduction.cpp  ntt_transform.cpp  polynomial_multiplication.cpp  top.cpp  top_avgpool.cpp  top_simple.cpp
test/: bgv_utils.h  encryption_test.cpp  ntt_transform_test.cpp  polynomial_multiplication_test.cpp  test_avg_pool.cpp  test_avg_pool1.cpp  test_avg_pool1_bwd.cpp  test_avg_pool2.cpp  test_avg_pool2_bwd.cpp  test_backward_path.cpp  test_conv1.cpp  test_conv1_bwd.cpp  test_conv2.cpp  test_conv2_bwd.cpp  test_conv2d.cpp  test_decryption.cpp  test_encryption.cpp  test_fc1_bwd.cpp  test_fc3_bwd.cpp  (+15 more)
(+315 files in other folders)
